# pkg/apiserver/api/openapi.yaml
@@ -31,27 +31,6 @@ paths:
       tags:
       - Client
       x-codegen-request-body-name: data
-  /api/v0/apps/searchapp:
-    post:
-      operationId: SearchApp
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/model.App'
-        description: app json数据
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SearchApp_200_response'
-          description: OK
-      summary: 查找App
-      tags:
-      - Client
-      x-codegen-request-body-name: data
   /api/v1/repos/{repo}:
     get:
       description: returns repository mode and resolve all branches
@@ -270,6 +249,67 @@ paths:
       summary: upload tgz file to upload task
       tags:
       - Client
+  /api/v2/search/apps:
+    get:
+      operationId: SearchApp
+      parameters:
+      - description: repo name
+        in: query
+        name: repo_name
+        required: true
+        schema:
+          type: string
+      - description: app channel
+        in: query
+        name: channel
+        required: true
+        schema:
+          type: string
+      - description: app id
+        in: query
+        name: app_id
+        required: true
+        schema:
+          type: string
+      - description: app arch
+        in: query
+        name: arch
+        required: true
+        schema:
+          type: string
+      - description: app module
+        in: query
+        name: module
+        required: true
+        schema:
+          type: string
+      - description: app version
+        in: query
+        name: version
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apiv2.SearchAppResponse'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apiv2.JSONError'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apiv2.JSONError'
+          description: Internal Server Error
+      summary: 查找App
+      tags:
+      - Client
 components:
   schemas:
     api.JSONResult:
@@ -317,65 +357,56 @@ components:
         trace_id:
           type: string
       type: object
-    gorm.DeletedAt:
+    apiv2.JSONError:
       properties:
-        time:
+        code:
+          type: integer
+        fields:
+          additionalProperties:
+            type: string
+          type: object
+        msg:
           type: string
-        valid:
-          description: Valid is true if Time is not NULL
-          type: boolean
+        trace_id:
+          type: string
       type: object
-    model.App:
-      properties:
-        appId:
-          description: AppID             e.g. org.deepin.test
-          type: string
-        arch:
-          description: "CPU Architecture, e.g. x86_64"
-          type: string
-        channel:
-          description: e.g. stable
-          type: string
-        checkSum:
-          description: "checksum, commit id"
-          type: string
-        createdAt:
-          type: string
-        deletedAt:
-          $ref: '#/components/schemas/gorm.DeletedAt'
-        description:
+    apiv2.SearchAppResponse:
+      example:
+        trace_id: trace_id
+        code: 0
+        data:
+        - uabUrl: uabUrl
+          size: 6
+          kind: kind
+          repoName: repoName
+          appId: appId
+          module: module
+          channel: channel
+          name: name
           description: description
-          type: string
-        id:
+          runtime: runtime
+          arch: arch
+          version: version
+        - uabUrl: uabUrl
+          size: 6
+          kind: kind
+          repoName: repoName
+          appId: appId
+          module: module
+          channel: channel
+          name: name
+          description: description
+          runtime: runtime
+          arch: arch
+          version: version
+      properties:
+        code:
           type: integer
-        kind:
-          description: kind
-          type: string
-        module:
-          description: e.g. binary
-          type: string
-        name:
-          description: App Name          e.g. Deepin Music
-          type: string
-        repoName:
-          description: repo name
-          type: string
-        runtime:
-          description: runtime
-          type: string
-        size:
-          description: size
-          type: integer
-        uab_url:
-          description: deprecated
-          type: string
-        updatedAt:
-          type: string
-        uuid:
-          description: 为了兼容旧接口，商店需要uuid做主键
-          type: string
-        version:
-          description: App Version       e.g. 0.0.1
+        data:
+          items:
+            $ref: '#/components/schemas/request.RegisterStruct'
+          type: array
+        trace_id:
           type: string
       type: object
     request.Auth:
@@ -401,6 +432,19 @@ components:
           type: string
       type: object
     request.RegisterStruct:
+      example:
+        uabUrl: uabUrl
+        size: 6
+        kind: kind
+        repoName: repoName
+        appId: appId
+        module: module
+        channel: channel
+        name: name
+        description: description
+        runtime: runtime
+        arch: arch
+        version: version
       properties:
         appId:
           type: string
@@ -475,13 +519,6 @@ components:
             items:
               $ref: '#/components/schemas/request.RegisterStruct'
             type: array
-        type: object
-    SearchApp_200_response:
-      allOf:
-      - $ref: '#/components/schemas/api.JSONResult'
-      - properties:
-          data:
-            $ref: '#/components/schemas/request.RegisterStruct'
         type: object
     GetRepo_200_response:
       allOf:
